# OOP-LABS

./: .gitignore
lab1/: CMakeLists.txt  README.md
lab1/include/: task.h
lab1/src/: main.cpp  task.cpp
lab1/tests/: tests.cpp
